# libRFC

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCPack.cmake  Options.cmake
doxygen/: doxygen.config
include/: libRFC.h
libRFC/: libRFC.cpp
test/: test_base64.cpp  test_main.cpp
